--- a/package.json
+++ b/package.json
@@ -1,24 +1,92 @@
 {
-  "name": "macdiskfull_app",
-  "version": "0.1.0",
+  "name": "macdiskfull-builder",
+  "version": "1.0.0",
+  "description": "MacDiskFull.com Website Builder - Affiliate site generator for Mac disk cleaning software",
+  "author": "MacDiskFull",
   "private": true,
+  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "electron:dev": "concurrently \"npm run dev\" \"cross-env NODE_ENV=development electron .\"",
+    "electron:build": "npm run build && npm run electron:build:intel && npm run electron:build:arm",
+    "electron:build:intel": "electron-builder --mac --x64",
+    "electron:build:arm": "electron-builder --mac --arm64",
+    "electron:build:win": "npm run build && electron-builder --win"
+  },
+  "build": {
+    "appId": "com.macdiskfull.builder",
+    "productName": "MacDiskFull Builder",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron/**/*",
+      "out/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": [
+        "dmg"
+      ],
+      "minimumSystemVersion": "12.0",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false
+    },
+    "asarUnpack": [
+      "**/node_modules/@img/**/*",
+      "**/node_modules/sharp/**/*"
+    ],
+    "dmg": {
+      "title": "MacDiskFull Builder",
+      "iconSize": 100,
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "public/favicon.ico"
+    }
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "electron-serve": "^3.0.0",
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^40.0.0",
+    "electron-builder": "^26.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
